--- a/packages/theme/icon.less
+++ b/packages/theme/icon.less
@@ -1,7 +1,7 @@
 @font-face {
   font-family: element-icons;
-  src: url(fonts/element-icons.woff) format("woff"),
-  url(fonts/element-icons.ttf) format("truetype");
+  src: url(./fonts/element-icons.woff) format("woff"),
+  url(./fonts/element-icons.ttf) format("truetype");
   font-weight: 400;
   font-display: "auto";
   font-style: normal
@@ -25,6 +25,10 @@
   content: "\e6da"
 }
 
+.el-icon-close:before {
+  content: "\e6db"
+}
+
 .el-icon-circle-close:before {
   content: "\e78d"
 }
@@ -35,6 +39,10 @@
 
 .el-icon-arrow-up:before {
   content: "\e6e1"
+}
+
+.el-icon-search:before {
+  content: "\e778"
 }
 
 .el-icon-arrow-down:before {
