--- a/packages/theme/cascader-panel.less
+++ b/packages/theme/cascader-panel.less
@@ -33,9 +33,6 @@
   font-size: 14px;
   cursor: pointer;
   white-space: nowrap;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
   user-select: none;
   margin-right: 30px
 }
@@ -650,15 +647,13 @@
   height: 100%
 }
 
-&.elp-cascader-panel {
-  display: -webkit-box;
-  display: -ms-flexbox;
+&.virtual-cascader-panel {
   display: flex;
   border-radius: 4px;
-  font-size: 14px
+  font-size: 14px;
 }
 
-&.elp-cascader-panel.is-bordered {
+&.virtual-cascader-panel.is-bordered {
   border: 1px solid #E4E7ED;
   border-radius: 4px
 }
@@ -698,15 +693,6 @@
   list-style: none;
   -webkit-box-sizing: border-box;
   box-sizing: border-box
-}
-
-.elp-cascader-menu__hover-zone {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  pointer-events: none
 }
 
 .elp-cascader-menu__empty-text {
