feat: 修改全选功能

--- a/packages/theme/cascader-panel.less
+++ b/packages/theme/cascader-panel.less
@@ -674,35 +674,24 @@
 .virtual-cascader-menu:last-child .elp-cascader-node {
   padding-right: 20px
 }
-
-.elp-cascader-menu__wrap {
-  height: 204px
-}
-
-.elp-search-check__check {
-  display: flex;
-  justify-content:space-between;
-  padding: 5px 20px;
-}
-
-.elp-cascader-menu__list {
+.virtual-cascader-menu__wrap {
+  height: 204px;
   position: relative;
   min-height: 100%;
   margin: 0;
   padding: 6px 0;
   list-style: none;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box
+  box-sizing: border-box;
 }
-
-.elp-cascader-menu__empty-text {
+.virtual-search-check__all {
+  padding: 5px 20px;
+}
+.virtual-cascader-menu__empty-text {
   position: absolute;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  text-align: center;
-  color: #C0C4CC
+  color: #C0C4CC;
 }
 
 .elp-cascader-node {
