--- a/packages/theme/cascader.less
+++ b/packages/theme/cascader.less
@@ -1178,7 +1178,7 @@
   margin-right: 30px;
 }
 
-.elp-cascader-node > .el-radio,
+.virtual-cascader-node > .el-radio,
 .el-radio:last-child {
   margin-right: 0;
 }
@@ -1477,7 +1477,7 @@
   line-height: 28px;
 }
 
-&.virtual-cascader.is-disabled .elp-cascader__label {
+&.virtual-cascader.is-disabled .virtual-cascader__label {
   z-index: 2;
   color: #c0c4cc;
 }
