fix: 修复打包后字体引用不到问题

--- a/packages/theme/icon.less
+++ b/packages/theme/icon.less
@@ -1,7 +1,7 @@
 @font-face {
   font-family: element-icons;
-  src: url(./fonts/element-icons.woff) format("woff"),
-  url(./fonts/element-icons.ttf) format("truetype");
+  src: url("./fonts/element-icons.woff") format("woff"),
+  url("./fonts/element-icons.ttf") format("truetype");
   font-weight: 400;
   font-display: "auto";
   font-style: normal
