feat(virtual-cascader): 增加主题定制

--- a/packages/styles/cascader-panel.less
+++ b/packages/styles/cascader-panel.less
@@ -28,7 +28,7 @@
 }
 
 .el-checkbox {
-  color: #606266;
+  color: var(--txt-color,@txt-color);
   font-weight: 500;
   font-size: 14px;
   cursor: pointer;
@@ -47,7 +47,7 @@
 .el-checkbox.is-bordered {
   padding: 9px 20px 9px 10px;
   border-radius: 4px;
-  border: 1px solid @border-color;
+  border: 1px solid var(--border-color,@border-color);
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   line-height: normal;
@@ -55,7 +55,7 @@
 }
 
 .el-checkbox.is-bordered.is-checked {
-  border-color: @theme-color
+  border-color: var(--theme-color, @theme-color)
 }
 
 .el-checkbox.is-bordered.is-disabled {
@@ -132,7 +132,7 @@
 
 .el-checkbox__input.is-disabled .el-checkbox__inner {
   background-color: #edf2fc;
-  border-color: @border-color;
+  border-color: var(--border-color,@border-color);
   cursor: not-allowed
 }
 
@@ -147,7 +147,7 @@
 
 .el-checkbox__input.is-disabled.is-checked .el-checkbox__inner {
   background-color: #F2F6FC;
-  border-color: @border-color
+  border-color: var(--border-color,@border-color)
 }
 
 .el-checkbox__input.is-disabled.is-checked .el-checkbox__inner::after {
@@ -156,7 +156,7 @@
 
 .el-checkbox__input.is-disabled.is-indeterminate .el-checkbox__inner {
   background-color: #F2F6FC;
-  border-color: @border-color
+  border-color: var(--border-color,@border-color)
 }
 
 .el-checkbox__input.is-disabled.is-indeterminate .el-checkbox__inner::before {
@@ -165,8 +165,8 @@
 }
 
 .el-checkbox__input.is-checked .el-checkbox__inner, .el-checkbox__input.is-indeterminate .el-checkbox__inner {
-  background-color: @theme-color;
-  border-color: @theme-color
+  background-color: var(--theme-color, @theme-color);
+  border-color: var(--theme-color, @theme-color)
 }
 
 .el-checkbox__input.is-disabled + span.el-checkbox__label {
@@ -180,11 +180,11 @@
 }
 
 .el-checkbox__input.is-checked + .el-checkbox__label {
-  color: @theme-color
+  color: var(--theme-color, @theme-color)
 }
 
 .el-checkbox__input.is-focus .el-checkbox__inner {
-  border-color: @theme-color
+  border-color: var(--theme-color, @theme-color)
 }
 
 .el-checkbox__input.is-indeterminate .el-checkbox__inner::before {
@@ -207,7 +207,7 @@
 .el-checkbox__inner {
   display: inline-block;
   position: relative;
-  border: 1px solid @border-color;
+  border: 1px solid var(--border-color,@border-color);
   border-radius: 2px;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -220,7 +220,7 @@
 }
 
 .el-checkbox__inner:hover {
-  border-color: @theme-color
+  border-color: var(--theme-color, @theme-color)
 }
 
 .el-checkbox__inner::after {
@@ -275,9 +275,9 @@
   line-height: 1;
   cursor: pointer;
   background: #FFF;
-  border: 1px solid @border-color;
+  border: 1px solid var(--border-color,@border-color);
   border-left: 0;
-  color: #606266;
+  color: var(--txt-color,@txt-color);
   -webkit-appearance: none;
   text-align: center;
   -webkit-box-sizing: border-box;
@@ -295,7 +295,7 @@
 }
 
 .el-checkbox-button__inner:hover {
-  color: @theme-color
+  color: var(--theme-color, @theme-color)
 }
 
 .el-checkbox-button__inner [class*=el-icon-] {
@@ -327,14 +327,14 @@
 
 .el-checkbox-button.is-checked .el-checkbox-button__inner {
   color: #FFF;
-  background-color: @theme-color;
-  border-color: @theme-color;
+  background-color: var(--theme-color, @theme-color);
+  border-color: var(--theme-color, @theme-color);
   -webkit-box-shadow: -1px 0 0 0 #8cc5ff;
   box-shadow: -1px 0 0 0 #8cc5ff
 }
 
 .el-checkbox-button.is-checked:first-child .el-checkbox-button__inner {
-  border-left-color: @theme-color
+  border-left-color: var(--theme-color, @theme-color)
 }
 
 .el-checkbox-button.is-disabled .el-checkbox-button__inner {
@@ -352,14 +352,14 @@
 }
 
 .el-checkbox-button:first-child .el-checkbox-button__inner {
-  border-left: 1px solid @border-color;
+  border-left: 1px solid var(--border-color,@border-color);
   border-radius: 4px 0 0 4px;
   -webkit-box-shadow: none !important;
   box-shadow: none !important
 }
 
 .el-checkbox-button.is-focus .el-checkbox-button__inner {
-  border-color: @theme-color
+  border-color: var(--theme-color, @theme-color)
 }
 
 .el-checkbox-button:last-child .el-checkbox-button__inner {
@@ -405,7 +405,7 @@
 }
 
 .el-radio {
-  color: #606266;
+  color: var(--txt-color,@txt-color);
   cursor: pointer;
   margin-right: 30px
 }
@@ -417,14 +417,14 @@
 .el-radio.is-bordered {
   padding: 12px 20px 0 10px;
   border-radius: 4px;
-  border: 1px solid @border-color;
+  border: 1px solid var(--border-color,@border-color);
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   height: 40px
 }
 
 .el-radio.is-bordered.is-checked {
-  border-color: @theme-color
+  border-color: var(--theme-color, @theme-color)
 }
 
 .el-radio.is-bordered.is-disabled {
@@ -506,8 +506,8 @@
 }
 
 .el-radio__input.is-checked .el-radio__inner {
-  border-color: @theme-color;
-  background: @theme-color
+  border-color: var(--theme-color, @theme-color);
+  background: var(--theme-color, @theme-color)
 }
 
 .el-radio__input.is-checked .el-radio__inner::after {
@@ -516,15 +516,15 @@
 }
 
 .el-radio__input.is-checked + .el-radio__label {
-  color: @theme-color
+  color: var(--theme-color, @theme-color)
 }
 
 .el-radio__input.is-focus .el-radio__inner {
-  border-color: @theme-color
+  border-color: var(--theme-color, @theme-color)
 }
 
 .el-radio__inner {
-  border: 1px solid @border-color;
+  border: 1px solid var(--border-color,@border-color);
   border-radius: 100%;
   width: 14px;
   height: 14px;
@@ -535,7 +535,7 @@
 }
 
 .el-radio__inner:hover {
-  border-color: @theme-color
+  border-color: var(--theme-color, @theme-color)
 }
 
 .el-radio__inner::after {
@@ -568,8 +568,8 @@
 }
 
 .el-radio:focus:not(.is-focus):not(:active):not(.is-disabled) .el-radio__inner {
-  -webkit-box-shadow: 0 0 2px 2px @theme-color;
-  box-shadow: 0 0 2px 2px @theme-color
+  -webkit-box-shadow: 0 0 2px 2px var(--theme-color, @theme-color);
+  box-shadow: 0 0 2px 2px var(--theme-color, @theme-color)
 }
 
 .el-radio__label {
@@ -663,7 +663,7 @@
   width: 100%;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  color: #606266;
+  color: var(--txt-color,@txt-color);
   border-right: solid 1px #E4E7ED
 }
 
@@ -717,11 +717,11 @@
 }
 
 .virtual-cascader-node.is-selectable.in-active-path {
-  color: #606266
+  color: var(--txt-color,@txt-color)
 }
 
 .virtual-cascader-node.in-active-path, .virtual-cascader-node.is-active, .virtual-cascader-node.is-selectable.in-checked-path {
-  color: @theme-color;
+  color: var(--theme-color, @theme-color);
   font-weight: 700
 }
 
